# c2pa-c

./: Cargo.toml
src/: c_api.rs  json_api.rs  lib.rs
