[package]
name = "c2pa-c"
version = "0.2.0"
edition = "2021"
authors = ["Gavin Peacock <gpeacock@adobe.com"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
c2pa = {path = "/home/andrea/Desktop/c2pa-rust-lib/c2pa-rs/sdk", features = ["file_io", "add_thumbnails", "fetch_remote_manifests"]}
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0.49"